--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excursion</title>
-    <link rel="stylesheet" href="/Users/alisamcclain/Projects/Excursion/resources/css/style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
-    
+    <p>
+        <a class="coming-soon" href="#">Download Excursiion (Coming Soon!)</a>
+    </p>
+    <p>
+        <video autoplay muted loop>
+            <source src="/Users/alisamcclain/Projects/Excursion/resources/video/excursion.mp4"type="video/mp4">
+        </video>
+    </p>
+    <h2>Your Personal Travel Guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p>
+        <img src="/Users/alisamcclain/Projects/Excursion/resources/images/camp.jpeg" alt="camp">
+    </p>
+    <p>
+        <img src="/Users/alisamcclain/Projects/Excursion/resources/images/phone.png" alt="phone">
+    </p>
+    <h3>Coming soon for iPhone and Android</h3>
+    <p>
+    <a class="coming-soon" href="#">Download Excursiion (Coming Soon!)</a>
+    </p>
+    <div class="footer">
+        <p>© Excursion</p>
+    </div>
 </body>
 </html>
