--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excursion</title>
-    <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" href="/Users/alisamcclain/Projects/Excursion/resources/css/style.css">
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
@@ -24,7 +24,7 @@
     <p>
         <img src="/Users/alisamcclain/Projects/Excursion/resources/images/phone.png" alt="phone">
     </p>
-    <h3>Coming soon for iPhone and Android</h3>
+    <h2>Coming soon for iPhone and Android</h2>
     <p>
     <a class="coming-soon" href="#">Download Excursiion (Coming Soon!)</a>
     </p>
