--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Discover hidden places in the world around you</h1>
     <p>
-        <a class="coming-soon" href="#">Download Excursiion (Coming Soon!)</a>
+        <a class="coming-soon" href="#">Download Excursion (Coming Soon!)</a>
     </p>
     <p>
         <video autoplay muted loop>
@@ -27,7 +27,7 @@
     </p>
     <h2>Coming soon for iPhone and Android</h2>
     <p>
-    <a class="coming-soon" href="#">Download Excursiion (Coming Soon!)</a>
+    <a class="coming-soon" href="#">Download Excursion (Coming Soon!)</a>
     </p>
     <div class="footer">
         <p>© Excursion</p>
