--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <h2>Your Personal Travel Guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <p>
-        <img src="/Users/alisamcclain/Projects/Excursion/resources/images/camp.jpeg" alt="camp">
+        <img src="camp.jpeg" alt="camp">
     </p>
     <p>
-        <img src="/Users/alisamcclain/Projects/Excursion/resources/images/phone.png" alt="phone">
+        <img src="phone.png" alt="phone">
     </p>
     <h2>Coming soon for iPhone and Android</h2>
     <p>
