--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </p>
     <p>
         <video autoplay muted loop>
-            <source src="/Users/alisamcclain/Projects/Excursion/resources/video/excursion.mp4"type="video/mp4">
+            <source src="excursion.mp4"type="video/mp4">
         </video>
     </p>
     <h2>Your Personal Travel Guide</h2>
